modresort-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modresort-deployment
  labels:
    app: modresort-app
spec:
  selector:
    matchLabels:
      app: modresort-app
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: modresort-app
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: "kpostreich/modresort:1.0"
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
