modresort-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: modresort
  labels:
    app: modresort-app
spec:
  type: ClusterIP
  ports:
    - port: 9080
  selector:
    app: modresort-app
    tier: frontend
